# aad88-eecs-397-f15

./: launch.xml
defiore_action_pkg/: CMakeLists.txt  package.xml
defiore_action_pkg/action/: sine.action
defiore_action_pkg/src/: action_client.cpp  action_server.cpp
defiore_cmdr_pkg/: CMakeLists.txt  package.xml
defiore_cmdr_pkg/src/: client_node.cpp  minimal_commander.cpp  temp_cmdr.cpp
example_trajectory/src/: example_trajectory_action_client.cpp  example_trajectory_action_server.cpp
minimal_joint_controller/src/: minimal_joint_controller.cpp
minimal_robot_description/: minimal_robot_description.urdf
